# Boaderflow

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  bootstrap.py  celery_app.py  cli.py  config.py  database.py  dependencies.py  enums.py  main.py  models.py  security.py  tasks.py  web.py
app/routes/: auth.py  clients.py  consignments.py  containers.py  control_tower.py  dashboard.py  drivers.py  handovers.py  helpers.py  incidents.py  milestones.py  ops.py  trips.py  users.py  vehicles.py
app/services/: audit.py  projections.py  replication.py  replication_topology.py  rules.py  seed.py  user_registration.py
app/static/: styles.css
app/templates/: base.html  dashboard.html
app/templates/auth/: login.html  register.html
app/templates/clients/: index.html  new.html
app/templates/consignments/: index.html  new.html
app/templates/containers/: index.html  new.html
app/templates/control_tower/: conflicts.html  containers.html  replication.html
docs/: BorderFlow_Week1_Proposal.docx  README.md  Squad_X_ERD_and_schema.docx  Squad_X_Week4.docx
infra/: docker-compose.yml  replication_topology.json
infra/docker/: api.Dockerfile  worker.Dockerfile
infra/k8s/: README.md  control-tower-stack.yaml  namespace.yaml  site-portal.yaml  site-stack.yaml
migrations/: 001_schema.sql  002_views_and_replication.sql  003_postgres_runtime_guards.sql
scripts/demo/: Common.ps1  Heal-Site.ps1  Partition-Site.ps1  README.md  Start-Site.ps1  Stop-Site.ps1  verify_convergence.py
tests/: conftest.py  test_app.py  test_replication.py  test_rules.py
(+14 files in other folders)
