[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borderflow"
version = "0.1.0"
description = "BorderFlow MVP: offline-first distributed logistics demo with FastAPI, Jinja2, PostgreSQL, and Celery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
